<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/gray"
    >

    <RelativeLayout
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/personal_back_img"
            android:id="@+id/login_back"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/login_register"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:text="@string/Login"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:gravity="center"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:text="@string/register"
            android:id="@+id/register"
            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/login_tips"/>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:id="@+id/login_weixin"
                android:orientation="vertical">

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_weixin"
                    />
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/login_weinxin"
                    android:textColor="@color/black"/>

            </LinearLayout>


            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/login_qq"
                >

                <ImageView

                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_qq"
                    />
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/login_qq"
                    android:textColor="@color/black"/>

            </LinearLayout>


            <LinearLayout
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/login_sina"
                >

                <ImageView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_sina"
                    />
                <TextView
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:text="@string/login_sina"
                    android:textColor="@color/black"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textSize="16sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/login_cntv"/>

        <EditText
            android:layout_marginTop="20dp"
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="账号：请输入邮箱或手机号"
            android:background="@drawable/edit_bg"
            android:backgroundTint="@color/white"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:id="@+id/login_check_email"
            android:textColor="@color/red"
            />

        <EditText
            android:layout_marginTop="5dp"
            android:id="@+id/login_pwd"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="请输入密码"
            android:background="@drawable/edit_bg"
            android:backgroundTint="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:id="@+id/login_check_pwd"
            android:textColor="@color/red"
            />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/forget_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_gravity="right"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:text="忘记密码?"/>


        <Button
            android:layout_marginTop="20dp"
            android:id="@+id/login"
            android:background="@drawable/img_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textColor="@color/white"/>

    </LinearLayout>
</LinearLayout>
